--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "frontend",
+  "name": "frog",
   "proxy": "http://localhost:8000",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://VasuB0612.github.io/frog",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
@@ -28,8 +29,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
