--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,10 +13,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: "npm"
+
+      - name: Install Dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Build
+        run: |
+          cd frontend
+          npm run build
+
       - name: Deploy with gh-pages
         run: |
-          cd frontend  # Adjust the directory if necessary
-          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
+          cd frontend
+          npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
