--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frog",
-  "proxy": "http://localhost:8000",
+  "proxy": "https://blog-backend-pfb0.onrender.com",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://VasuB0612.github.io/frog",
@@ -9,6 +9,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@mui/icons-material": "^5.15.19",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.19",
@@ -31,6 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
