--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frog",
-  "proxy": "https://blog-backend-pfb0.onrender.com",
+  "proxy": "http://localhost:8000",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
